--- a/poke.html
+++ b/poke.html
@@ -19,6 +19,19 @@
             <button id="boton-mascota">Seleccionar</button>
         </section>
 
+        <section id="ver-mapa">
+            <h2 class="titulo">Recorre el mapa con tu Pokemon</h2>
+            <canvas id="mapa"></canvas>
+            <button onmouseup="detenerMovimiento()"  onmousedown="moverArriba()">Arriba</button>  
+            <button onmouseup="detenerMovimiento()" onmousedown="moverIzquierda()">Izquierda</button> 
+            <button onmouseup="detenerMovimiento()" onmousedown="moverAbajo()">Abajo</button> 
+            <button onmouseup="detenerMovimiento()" onmousedown="moverDerecha()">Derecha</button> 
+
+
+
+
+        </section>
+
         <section id="seleccionar-ataque">
             <h1 class="titulo">Pokemon</h1>
 
@@ -37,12 +50,12 @@
 
             <div class="ataques"> 
                 <div class="ataques-jugador">
-                    <p id="vidas-jugador">3</p>
+                    <p id="vidas-jugador">0</p>
                     <p id="mascota-jugador"></p>
                     <div id="ataques-del-jugador"></div>
                 </div>
                 <div class="ataques-enemigo">
-                    <p id="vidas-enemigo">3</p>
+                    <p id="vidas-enemigo">0</p>
                     <p id="mascota-enemigo"></p>
                     <div id="ataques-del-enemigo"></div>
                 </div>
